Add zone-aware uploads, richer reports, and user documentation.
Regional preflight and session endpoints drive uploads; routing.json and HTML
reports expose config, aggregates, and zone URLs. Rate-limit settings support
Box default, custom, and disabled comparison modes. Includes USER_GUIDE,
example profiles, and cleanup of unused code.

Co-authored-by: Cursor <cursoragent@cursor.com>